--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API 命名统一工具</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/kuromoji@0.1.2/build/kuromoji.js"></script>
+    <script src="kuromoji.js"></script>
     <script src="dictionary.js"></script>
     <style>
         :root { --primary-color: #1a73e8; --success-color: #34a853; --bg-color: #f0f2f5; }
