--- a/index.html
+++ b/index.html
@@ -86,105 +86,4 @@
             <div v-if="Object.keys(customDict).length > 0" style="margin-top: 20px; border-top: 2px solid #eee; padding-top: 15px;">
                 <button class="btn btn-success" @click="exportToGit">复制补丁代码并跳转</button>
                 <p style="font-size: 11px; color: #888; margin-top: 10px;">
-                    * <b>只复制</b>追加词条行的格式代码。
-                </p>
-            </div>
-        </div>
-    </div>
-
-    <script>
-        const { createApp, ref, computed, onMounted } = Vue;
-
-        createApp({
-            setup() {
-                const input = ref('');
-                const isReady = ref(false);
-                const tokenizer = ref(null);
-                const newJa = ref('');
-                const newEn = ref('');
-                const customDict = ref(JSON.parse(localStorage.getItem('api_custom_dict') || '{}'));
-
-                onMounted(() => {
-                    kuromoji.builder({ dicPath: "./dict" }).build((err, _tokenizer) => {
-                        if (!err) { tokenizer.value = _tokenizer; isReady.value = true; }
-                    });
-                });
-
-                const copyText = (text, event) => {
-                    if (!text) return;
-                    navigator.clipboard.writeText(text).then(() => {
-                        const btn = event.target;
-                        const original = btn.innerText;
-                        btn.innerText = '已复制';
-                        btn.classList.add('copied');
-                        setTimeout(() => {
-                            btn.innerText = original;
-                            btn.classList.remove('copied');
-                        }, 1500);
-                    });
-                };
-
-                const addEntry = () => {
-                    if (newJa.value && newEn.value) {
-                        customDict.value[newJa.value.trim()] = newEn.value.trim();
-                        newJa.value = ''; newEn.value = '';
-                        saveLocal();
-                    }
-                };
-
-                const removeEntry = (ja) => {
-                    delete customDict.value[ja];
-                    saveLocal();
-                };
-
-                const saveLocal = () => localStorage.setItem('api_custom_dict', JSON.stringify(customDict.value));
-
-                // 核心修改：生成 "key": "value", 格式并移除 alert
-                const exportToGit = () => {
-                    const entries = Object.entries(customDict.value);
-                    if (entries.length === 0) return;
-                    
-                    // 生成行格式：  "测试": "test",
-                    const patchCode = entries
-                        .map(([ja, en]) => `    "${ja}": "${en}",`)
-                        .join('\n');
-                    
-                    navigator.clipboard.writeText(patchCode).then(() => {
-                        localStorage.removeItem('api_custom_dict');
-                        window.open("https://github.com/lightclark/api-naming-standard/edit/main/dictionary.js", "_blank");
-                        location.reload();
-                    });
-                };
-
-                const getBaseDict = () => (typeof BASE_DICT !== 'undefined' ? BASE_DICT : {});
-
-                const debugTokens = computed(() => {
-                    if (!input.value || !tokenizer.value) return [];
-                    const text = input.value.trim();
-                    const combined = { ...getBaseDict(), ...customDict.value };
-                    if (combined[text]) return [text];
-                    return tokenizer.value.tokenize(text).map(t => t.surface_form);
-                });
-
-                const processedTokens = computed(() => {
-                    if (!input.value || !tokenizer.value) return [];
-                    const text = input.value.trim();
-                    const combined = { ...getBaseDict(), ...customDict.value };
-                    if (combined[text]) return [combined[text]];
-                    return tokenizer.value.tokenize(text).map(t => combined[t.surface_form] || t.surface_form);
-                });
-
-                const camelResult = computed(() => {
-                    return processedTokens.value.map((w, i) => 
-                        i === 0 ? w.toLowerCase() : w.charAt(0).toUpperCase() + w.slice(1).toLowerCase()
-                    ).join('');
-                });
-
-                const snakeResult = computed(() => processedTokens.value.join('_').toLowerCase());
-
-                return { input, isReady, camelResult, snakeResult, customDict, newJa, newEn, addEntry, removeEntry, debugTokens, exportToGit, copyText };
-            }
-        }).mount('#app');
-    </script>
-</body>
-</html>
+                    * 格式：首行带逗号，末行不带逗号，方便直接追加。
